# axiomesh-sdk

./: .gitignore  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN_NOTES.md  GITHUB_PUBLICATION_GUIDE.md  LICENSE  MANIFEST.in  MEP_METHOD_CATALOG.json  MEP_METHOD_CATALOG.md  MEP_PROTOCOL_SCHEMA.json  MEP_SPEC.md  NOTICE  POSITIONING_MEP_VS_MCP.md  PUBLIC_RELEASE_ANNOUNCEMENT.md  PUBLISHING_GUIDE.md  PYPROJECT_URLS_TEMPLATE.toml  README.md  RELEASE_NOTES.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml
src/drone_sdk/: __init__.py  demo.py  model.py
src/edp/: __init__.py
src/edp_core/: __init__.py  contracts.py  math_model.py  mission.py  multiagent.py  rules.py  runtime.py  semantic.py
src/mep/: __init__.py
src/mep_core/: spec.py  (+5 more)
tests/: test_compat_imports.py  test_final_release.py  test_iteration12_features.py  test_iteration13_features.py  test_iteration14_features.py  test_iteration15_features.py  test_iteration16_features.py  test_iteration17_features.py  test_iteration18_features.py  test_iteration19_features.py  test_knowledge.py  test_math_export.py  test_mep_arbitration_rollback_federation.py  test_mep_jsonrpc.py  test_mep_methods.py  test_mep_multi_agent.py  test_mep_multi_context.py  test_mep_negotiation_execution.py  test_multi_agent_mesh.py  test_multi_drone_scenario.py  test_publication_assets.py  test_rules.py  test_scoped_mesh_propagation.py  test_task_allocation.py
tools/: export_protocol_catalog.py
(+4 files in other folders)
