[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "axiomesh-sdk"
version = "1.0.1"
description = "EDP + MEP + SAVOIR SDK for context-aware, certainty-aware, federated multi-agent environments"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
authors = [
  { name = "OneOrigine" }
]
keywords = [
  "multi-agent",
  "robotics",
  "drones",
  "protocol",
  "context-aware-ai",
  "federation",
  "world-model",
  "certainty",
  "json-rpc"
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: System :: Distributed Computing"
]
dependencies = []


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
